--- a/templates/base.html
+++ b/templates/base.html
@@ -6,27 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HodLScreener</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{%static 'bootstrap.min.css'%}">
     <link rel="stylesheet" href="{%static 'style.css'%}">
     <script src="{%static 'script.js'%}"></script>
 </head>
 <body>
     <div class="container-fluid pt-3">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-12">
                 <h1>HODLSCREENER</h1>
             </div>
-            <div class="col-md-4">
-                <form>
-                    <div class="col-fourth">
+            <div class="justify-content-center col-md-4 col-sm-12 container row header">
+                    <div class="col-3">
                         <label for="currency">currency</label>
-                        <select name="currency" id="currency">
-                            <option value="1">OPT</option>
-                            <option value="2">OPT</option>
-                            <option value="3">OPT</option>
+                        <select name="currency" id="currency" onchange="change_table(data)">
+                            <option value="USD">USD</option>
+                            <option value="GPB">GPB</option>
+                            <option value="Euro">Euro</option>
+                            <option value="RMB">RMB</option>
+                            <option value="INR">INR</option>
+                            <option value="Yen">Yen</option>
                         </select>
                     </div>
-                    <div class="col-fourth">
+                    <div class="col-3">
                         <label for="bitcoin">bitcoin</label>
                         <select name="bitcoin" id="bitcoin">
                             <option value="1">OPT</option>
@@ -34,9 +36,9 @@
                             <option value="3">OPT</option>
                         </select>
                     </div>
-                    <input type="submit" id="submit" value="BUY BTC">
-                </form>
+                    <a href="https://www.coinmarketcap.com" id="submit">BUY BTC</a>
             </div>
+            
             <div class="col-md-4"></div>
         </div>        
     </div>
